# boorker-watchdog

./: .gitignore  .gitmodules  ATTRIBUTIONS.md  README.md  REGULATORY.md
docs/: 2026-03-01-session-summary.md  SHOPPING-CHECKLIST.md
docs/hardware/: esp32-s3-devkitc-pinout.md  esp32-s3-devkitc-wiring-pinout.excalidraw  heltec-v3-pinout.md
docs/plans/: 2026-02-26-basement-watchdog-design.md  2026-02-27-boorker-esp-idf-setup.md  2026-02-27-boorker-platform-design.md  2026-02-28-led-feedback-design.md  2026-02-28-led-feedback-implementation.md  2026-02-28-system-control-design.md  2026-02-28-system-control-implementation.md  2026-02-28-tailscale-manager-design.md  2026-02-28-tailscale-manager-implementation.md  2026-02-28-web-interface-design.md  2026-02-28-web-interface-implementation.md  2026-02-28-wifi-manager-design.md  2026-02-28-wifi-manager-implementation.md  led-state-machine.md
firmware/: CMakeLists.txt  partitions.csv  sdkconfig.defaults  sdkconfig.defaults.devkitc  sdkconfig.defaults.heltec_v3
firmware/components/andon_service/: CMakeLists.txt  Kconfig
firmware/components/button_driver/: CMakeLists.txt  Kconfig
firmware/components/buzzer_driver/: CMakeLists.txt  Kconfig
firmware/components/credentials/: CMakeLists.txt  Kconfig
firmware/components/device_identity/: CMakeLists.txt  Kconfig
firmware/components/device_state/: CMakeLists.txt  Kconfig
firmware/components/dht22_driver/: CMakeLists.txt  Kconfig  (+1 more)
firmware/components/led_feedback/: CMakeLists.txt  Kconfig
firmware/components/led_feedback/include/: led_feedback.h
firmware/components/led_feedback/src/: led_console.c  led_feedback.c  led_patterns.c
firmware/components/ota_manager/: CMakeLists.txt  Kconfig
firmware/components/ota_manager/include/: ota_manager.h
firmware/components/ota_manager/src/: ota_download.c  ota_flash.c  ota_github.c  ota_manager.c  ota_manager_internal.h
firmware/components/sensor_manager/: CMakeLists.txt  Kconfig
firmware/components/sensor_manager/include/: sensor_manager.h  sensor_types.h
firmware/components/sensor_manager/src/: sensor_console.c  sensor_manager.c
firmware/components/status_display/: CMakeLists.txt  Kconfig
firmware/components/status_display/include/: display_hal.h  status_display.h
firmware/components/status_display/src/: display_console.c  display_hal.c  display_internal.h  display_logo.c  display_screens.c  status_display.c
firmware/components/status_led/: CMakeLists.txt  Kconfig  idf_component.yml
firmware/components/status_led/include/: status_led.h
firmware/components/status_led/src/: led_console.c  led_patterns.c  status_led.c
firmware/components/sys_console/: CMakeLists.txt  Kconfig
firmware/components/sys_console/include/: sys_console.h
firmware/components/sys_console/src/: sys_console.c
firmware/components/system_console/: CMakeLists.txt  Kconfig
firmware/components/system_console/include/: system_console.h
firmware/components/system_console/src/: system_console.c
firmware/components/tailscale_manager/: CMakeLists.txt  Kconfig
firmware/components/tailscale_manager/include/: tailscale_manager.h
firmware/components/tailscale_manager/src/: tailscale_console.c  tailscale_console.h  tailscale_manager.c  tailscale_nvs.c  tailscale_nvs.h
firmware/components/wifi_manager/: CMakeLists.txt  Kconfig
firmware/components/wifi_manager/include/: wifi_manager.h
firmware/components/wifi_manager/src/: wifi_manager.c  wifi_mdns.c  wifi_mdns_internal.h  wifi_power.c  wifi_power_internal.h  wifi_prov_internal.h  wifi_provisioning.c
firmware/main/: CMakeLists.txt  Kconfig  idf_component.yml  main.c  version.h
firmware/spiffs/: .gitignore
tools/oled-emulator/: Makefile  credentials.h  display_internal.h  esp_chip_info.h  esp_err.h  esp_log.h  esp_netif.h  esp_system.h  esp_timer.h  esp_wifi.h  main.c  mock_esp.c  mock_esp.h  sdkconfig.h  sensor_manager.h  sensor_types.h  svg_to_xbm.py  version.h
www/: build.js  package-lock.json  package.json  vite.config.js
www/poc/: USER_STORIES.md  spa-dashboard.html  spa-history.html  spa-login.html  spa-mesh.html  spa-sensors.html  spa-settings.html  spa-terminal.html  spa-wizard.html
www/scripts/: deploy.sh
www/src/: app.js  index.html  login.html  password-change.html  style.css
(+95 files in other folders)
