idf_component_register(
    SRCS
        "src/led_feedback.c"
        "src/led_patterns.c"
        "src/led_console.c"
    INCLUDE_DIRS
        "include"
    REQUIRES
        led_indicator
        nvs_flash
        console
        freertos
        andon_service
        led_driver
    PRIV_REQUIRES
        log
)
