idf_component_register(
    SRCS
        "src/sensor_manager.c"
        "src/sensor_console.c"
    INCLUDE_DIRS
        "include"
    REQUIRES
        dht22_driver
        sw420_driver
        button_driver
        event_bus
        nvs_flash
        log
        console
    PRIV_REQUIRES
        freertos
)
